--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -16,16 +16,39 @@
     background-color: #111;
 }
 
+.leftSide{
+    display: flex;
+    flex-direction: row;
+    height: 50px;
+    align-items: center;
+    color: white;
+}
+
+.leftText{
+    padding-left: 20px;
+}
+
+
 .navLogo{
-    position: fixed;
-    left:20;
     width: 90px;
     object-fit:contain;
 }
 
+.rightSide{
+    display: flex;
+    flex-direction: row;
+    margin-right: 20px;
+    height: 50px;
+    color: white;
+    align-items: center;
+}
+
+.rightItem{
+    padding-right: 20px;
+}
+
 .navAvatar{
-    position:fixed;
-    right: 20px;
     width: 40px;
     object-fit: contain;
+    padding-right: 20px;
 }
