--- a/src/components/LandingPage/GetStarted/GetStarted.css
+++ b/src/components/LandingPage/GetStarted/GetStarted.css
@@ -45,7 +45,7 @@ button{
     justify-content: center;
 }
 
-.description{
+.getStartedDescription{
     text-align: center;
     font-size: 2.5rem;
     max-width: 800px;
