--- a/src/components/NavFooter/Footer/Footer.css
+++ b/src/components/NavFooter/Footer/Footer.css
@@ -1,7 +1,7 @@
 .contact{
     text-align: center;
     color: white;
-    padding: 20px;
+    padding-top: 40px;
 }
 
 .iconContainer{
@@ -9,7 +9,7 @@
     color:white;
     margin-left: 20px;
     justify-content: center;
-    padding-bottom: 20px;
+    padding: 40px 0px;
 }
 
 a{
