--- a/src/container/AuthPage/AuthPage.css
+++ b/src/container/AuthPage/AuthPage.css
@@ -18,3 +18,11 @@
     margin-top: -100px; /* Negative half of height. */
     margin-left: -250px; /* Negative half of width. */
 }
+
+.navLogo{
+    position: fixed;
+    top: 2%;
+    left: 2%;
+    width: 150px;
+    object-fit:contain;
+}
