dynamically responds if user is logged in/out, set up redux

--- a/src/container/AuthPage/AuthPage.css
+++ b/src/container/AuthPage/AuthPage.css
@@ -19,7 +19,7 @@
     margin-left: -250px; /* Negative half of width. */
 }
 
-.navLogo{
+.authLogo{
     position: fixed;
     top: 2%;
     left: 2%;
